platform/monitoring/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    policy.home.arpa/platform-tier: "true"
    policy.home.arpa/allow-hostpath: "true"

  annotations:
    argocd.argoproj.io/sync-wave: "-2"
